MapFragment: fix java list usage for sdk 31
Signed-off-by: Peppe289 <gsperanza204@protonmail.com>